--- a/popup.html
+++ b/popup.html
@@ -42,10 +42,11 @@
     </label>
 
     <div style="margin-top:5px">
-        <p>Decolored sites:</p>
+        <p style="margin:0px;font-size:15px;">Decolored Sites:</p>
+        <p>(Format as [domain_name].com)</p>
         <textarea id="siteList" rows="5" style="resize: vertical; overflow:auto;">
-
         </textarea>
+        <button id="saveSites">Save</button>
     </div>   
     
   </div>
