settings blocker kinda works

--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,7 @@
   <button id="feedback">Send Feedback</button>
   <div id="settingsPage" style="display: none;">
     <hr style="width: 90%; margin-top: 5px; border: 1px solid #000000;" />
-    <p id="settingsLock"></p>
+    <p style="display: none;" id="settingsLock"></p>
     <div id="actualSettingsPage" style="display: none">
       <p style="text-align:center;font-size:15px;text-decoration:underline">Settings</p>
       
